# app/Http/Requests/Transaction/DepositRequest.php
@@ -1,0 +1,29 @@
+<?php
+
+namespace App\Http\Requests\Transaction;
+
+use Illuminate\Foundation\Http\FormRequest;
+
+class DepositRequest extends FormRequest
+{
+    /**
+     * Determine if the user is authorized to make this request.
+     */
+    public function authorize(): bool
+    {
+        return true;
+    }
+
+    /**
+     * Get the validation rules that apply to the request.
+     *
+     * @return array<string, \Illuminate\Contracts\Validation\ValidationRule|array<mixed>|string>
+     */
+    public function rules(): array
+    {
+        return [
+            'amount' => ['required', 'numeric', 'min:0'],
+            'user_id' => ['required', 'exists:users,id'],
+        ];
+    }
+}
